Print CRF: Fixed issue where right header sometimes wraps under left header

--- a/web/src/main/webapp/css/app.css
+++ b/web/src/main/webapp/css/app.css
@@ -32,7 +32,7 @@ h4 {
 .left-header {
   display: inline-block;
   width: 500px; 
-  padding-right:100px;
+  padding-right:200px;
   vertical-align: top;
 }
 
